derive/tests/snapshots/self_referencing_cascade/Folder/create_folder.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `folder` table.
    pub fn create_folder<'a>(
        &'a self,
        folder: CreateFolder,
    ) -> Result<Folder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let parent_folder_id = folder.parent_folder_id.value();
        let deleted = false;
        let folder = Folder {
            id,
            parent_folder_id,
            deleted,
        };
        let mut the_same_or_another_folder: Option<Folder> = None;
        if parent_folder_id.ne(&0) {
            match self.get_folder_by_id(folder.get_parent_folder_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "folder".into(),
                            create_or_update: crate::spacetimedsl::error::Action::Create,
                            column_names_and_row_values: format!(
                                "{{ {} : {} }}", parent_folder_id, folder
                                .get_parent_folder_id()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        match self.db().folder().try_insert(folder.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "folder".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ folder : {:?} }}", folder
                            )
                                .into(),
                        })
                    }
                    spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "folder".into(),
                        })
                    }
                }
            }
        }
    }
}
