derive/tests/snapshots/self_referencing_cascade/Folder/get_all_folders.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `folder` table.
    pub fn get_all_folders<'a>(&'a self) -> impl Iterator<Item = Folder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().folder().iter()
    }
}
