derive/tests/snapshots/self_referencing_cascade/Folder/get_folders_by_parent_folder_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Folder` iterator that contains all rows in the `folder` table whose value matches the value from the single-column btree index on the `parent_folder_id` column.
    pub fn get_folders_by_parent_folder_id<'a>(
        &'a self,
        parent_folder_id: impl Into<FolderId>,
    ) -> impl Iterator<Item = Folder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().folder().parent_folder_id().filter(parent_folder_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Folder` iterator that contains all rows in the `folder` table whose value matches the value from the single-column btree index on the `parent_folder_id` column.
    pub fn get_folders_by_parent_folder_id<'a>(
        &'a self,
        parent_folder_id: impl Into<FolderId>,
    ) -> impl Iterator<Item = Folder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().folder().parent_folder_id().filter(parent_folder_id.into().value())
    }
}
